Document verified Labs 3-7 Windows participant paths (IntelliJ + PowerShell).